# app/Http/Controllers/APIController.php
@@ -21,12 +21,33 @@ use App\Models\Course;
  *     )
  * )
  */
+/**
+* @OA\server(
+*      url = "https://api-host.dev.app",
+*      description="測試區主機"
+* )
+* @OA\server(
+*      url = "https://api-host.production.app",
+*      description="正式區主機"
+* )
+* @OA\server(
+*      url = "http://localhost",
+*      description="Localhost"
+* )
+*/
 class APIController extends Controller
 {
     /**
      * @OA\Get(
-     *     path="/api/profile/info",
-     *     @OA\Response(response="200", description="獲取現在時間"),
+     *     path="/api/profile",
+     *     operationId="time",
+     *     tags={"Time"},
+     *     summary="取得此前時間 Summary",
+     *     description="取得此前時間 Description",
+     *     @OA\Response(
+     *         response="200", 
+     *         description="請求成功"
+     *     ),
      * )
      */
     public function profile(Request $request)
@@ -47,8 +68,28 @@ class APIController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/{id}",
-     *     @OA\Response(response="200", description="拿取 課程資訊"),
+     *     path="/api/course/{id}",
+     *     operationId="courseShow",
+     *     tags={"Course"},
+     *     summary="取得課程詳情",
+     *     description="取得課程詳情",
+     *     @OA\Parameter(
+     *         name="id",
+     *         description="Course id",
+     *         required=true,
+     *         in="path",
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200", 
+     *         description="請求成功"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="資源不存在",
+     *     ),
      * )
      */
     public function course($id)
